# redforth

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  codegen.fs  core.fs  eyeball.fs  libred.c  libred.h  selftest.fs  tools.fs  vm-gnuc.c  words-basic.h  words-stdc.h
libred/: libred-linenoise.c  libred-rp2.c  libred-stdc.c  libred.c  libred.h  linenoise.c  linenoise.h  vm-gnuc.c
ports/rp2/: littlefs.c  littlefs.h  main.c
ports/unix/: main.c
scripts/: codegen.fs  encode.fs  eyeball.fs  musl-cross.cmake  selftest.fs
words/: core-words.fs  debug-words.fs  extra-words.fs  file-words.fs  memory-words.h  native-words.h  rp2-file-words.fs  rp2-words.h  shell-words.fs  stdc-words.h  tools-words.fs  unix-file-words.fs  unix-words.h
